--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kiwisolver==1.4.7
 markdown-it-py==3.0.0
+matplotlib==3.9.2
 MarkupSafe==3.0.2
 mdurl==0.1.2
 narwhals==1.13.2
